tests/k8s/manifests/gateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
spec: {}
status: {}
