tests/k8s/manifests/http-route-echo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: default
  labels:
    app: switchboard-gateway
spec:
  parentRefs:
  - name: switchboard-gateway
    sectionName: http
  hostnames:
  - "echo.localtest.me"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: echo
      port: 80
